fix: SignedUp text no longer hidden under footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,6 +342,7 @@ input[type=checkbox] {
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+    margin-bottom: 70px;
     border: 4px #ffe7ab solid;
 }
 
